# game-of-life

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
benches/: benchmark.rs
src/: game_of_life.rs  gameoflife.rs  lib.rs  main.rs  presentation.rs  tui.rs
