[package]
name = "gameoflife"
authors = ["Christopher Hecker"]
version = "0.3.1"
description = "An efficient implementation of Conway's Game of Life"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
exitcode = "1.1.2"
indicatif = "0.17.3"
inquire = "0.5.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-ndimage = "0.3.0"
plotters = "0.3.4"
rand = "0.8.5"
rayon = "1.6.1"
termion = "2.0.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
