[package]
name = "gameoflife"
authors = ["Christopher Hecker"]
version = "0.4.0"
description = "An blazingly fast implementation of Conway's Game of Life"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
exitcode = "1.1.2"
gif = "0.12.0"
indicatif = "0.17.3"
inquire = { version = "0.6.0", default-features = false, features = [
    "macros",
    "termion",
] }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-ndimage = "0.3.0"
rand = "0.8.5"
rayon = "1.7.0"
termion = "2.0.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
